--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .main {
     display: grid;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 1fr 4fr;
     width: 100%;
     height: 100vh;
 }
@@ -60,8 +60,10 @@ nav > ul > li {
 .header {
     display: grid;
     grid-template-rows: 1fr 1fr;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 10px -5px rgba(0,0,0,0.2);
     padding-bottom: 15px;
+    position: relative;
+    z-index: 1;
 }
 
 .upper-header {
@@ -175,6 +177,9 @@ label {
 .content {
     display: grid;
     grid-template-columns: 3fr 1fr;
+    background-color: rgb(222, 241, 248);
+    gap: 20px;
+    padding: 30px;
 }
 
 .announcements {
@@ -189,4 +194,43 @@ label {
     grid-row: 1/ span 2;
 }
 
+.projects > p {
+    font-size: 1.4em;
+    margin-bottom: 10px;
+}
+
+.cards-container {
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    gap: 30px;
+}
+
+.card {
+    font-size: 1.2em;
+    padding: 20px;
+    background-color: #fff;
+    border-left: 8px solid rgb(30, 174, 210);
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card > p {
+    font-weight: bold;
+    grid-column: 1 / span 3;
+    margin: 15px 0 10px 0;
+}
+
+.card > .description {
+    grid-column: 1 / span 3;
+}
+
+.card > .clickables {
+    grid-column: 3;
+    grid-row: 3;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.2em;
+    margin-top: 10px;
+}
 
