--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
     display: grid;
     grid-template-columns: 1fr 4fr;
     width: 100%;
-    height: 100vh;
+    height: auto;
+    
 }
 
 /* Start of Sidebar */
@@ -195,7 +196,8 @@ label {
 }
 
 .projects > p,
-.announcements > p {
+.announcements > p,
+.trending p {
     font-size: 1.4em;
     margin-bottom: 10px;
     font-weight: bold;
@@ -263,6 +265,38 @@ label {
     padding-bottom: 15px;
 }
 
-.description {
+.description,
+.trending-title {
     color: gray;
+}
+
+/* End of Announcements */
+/* Start of Trending */
+
+
+.trending-container {
+    background-color: #fff;
+    padding: 20px 30px 20px 30px;
+    display: grid;
+    gap: 25px;
+    border-radius: 5px;
+}
+
+.trending-user {
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 4fr;
+}
+
+.trending-user > img {
+    max-width: 50px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 50%;
+    grid-row: 1 / 3;
+}
+
+.trending-username {
+    font-weight: bold;
+    font-size: 0.9em;
 }
